--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -28,35 +30,37 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+      <h1>About Us</h1>
+      Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://tse2.mm.bing.net/th?id=OIP.Ck2Usj84bIh_SiI2QJ7b-QHaEp&pid=Api&P=0&h=220" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">John Smith</p>
+          <p>Chief Executive Officer</p>
+          <p class="card-text">John is an experienced executive in the car sales industry with over 30 years of experience. He holds a Bsc in Chemical engineering and an MBA in Finance</p>
+          <p>john@abc.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://toppng.com/uploads/preview/stock-person-png-stock-photo-man-11563049686zqeb9zmqjd.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Alex Johnson</p>
+          <p>Chief Finance Officer</p>
+          <p class="card-text">Alex is an experienced finance officer who has worked in the car sales industry as well as many other retails industries, he currently holds an MBA in Finance and is pursuing a Phd in Data Science</p>
+          <p>alex@abc.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://is4.revolveassets.com/images/p4/n/z/FREE-WD1691_V1.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Jane Anderson</p>
+          <p>Chief Operations Officer</p>
+          <p class="card-text">Jane is an experienced sales executive with over 15 years of experience and is responsible for running the organisation on a daily bases.</p>
+          <p>jane@abc.com</p>
         </div>
       </div>
     </div>
